--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+      body{
+        max-width: 1020px;
+        margin: 0 auto;
+        outline: 0;
+        font-family: sans-serif;
+        background-color: rgb(186, 142, 227);
+      }
+    </style>
   </head>
   <body>
     <noscript>
